RESOLVED FIXED137969
Do not include GraphicsContext3D.h when 3D_GRAPHICS is not used
https://bugs.webkit.org/show_bug.cgi?id=137969
Summary Do not include GraphicsContext3D.h when 3D_GRAPHICS is not used
Milan Crha
Reported 2014-10-22 11:09:54 PDT
The GraphicsContext3D.h includes ShaderLang.h, which might not be always available during the build time, thus better to not include GraphicsContext3D.h when the 3D_GRAPHICS is not used.
Attachments
proposed wk patch (1.08 KB, patch)
2014-10-22 11:12 PDT, Milan Crha
no flags
Milan Crha
Comment 1 2014-10-22 11:12:56 PDT
Created attachment 240280 [details] proposed wk patch
WebKit Commit Bot
Comment 2 2014-10-22 23:45:48 PDT
Comment on attachment 240280 [details] proposed wk patch Clearing flags on attachment: 240280 Committed r175088: <http://trac.webkit.org/changeset/175088>
WebKit Commit Bot
Comment 3 2014-10-22 23:45:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.